Over Powered Mod configuration

--- a/mod.config
+++ b/mod.config
@@ -6,10 +6,10 @@
 
 # The id of the mod packaged by this project.
 # This must exist as a directory in the mods directory and should not contain spaces.
-MOD_ID="example"
+MOD_ID="yupgi_alert"
 
 # The OpenRA engine version to use for this project.
-ENGINE_VERSION="release-20200503"
+ENGINE_VERSION="{DEV_VERSION}"
 
 # .dll filenames compiled by the mod solution for use by the runtime assembly check
 WHITELISTED_MOD_ASSEMBLIES="OpenRA.Mods.Example.dll"
@@ -23,7 +23,7 @@ WHITELISTED_MOD_ASSEMBLIES="OpenRA.Mods.Example.dll"
 
 # Enable tests for common errors when a new commit is pushed to the GitHub repository
 # Accepts values "True" or "False".
-TRAVIS_TEST_MOD="True"
+TRAVIS_TEST_MOD="False"
 
 # Perform a dry run of the installer generation when a new commit is pushed to the GitHub repository
 # Accepts values "True" or "False".
@@ -39,7 +39,7 @@ TRAVIS_TEST_PACKAGING="False"
 #  - Windows installers will be named as {PACKAGING_INSTALLER_NAME}-{TAG}.exe
 #  - macOS installers will be named as {PACKAGING_INSTALLER_NAME}-{TAG}.dmg
 #  - Linux .appimages will be named as {PACKAGING_INSTALLER_NAME}-${TAG}.AppImage
-PACKAGING_INSTALLER_NAME="ExampleMod"
+PACKAGING_INSTALLER_NAME="OverPoweredMod"
 
 # The human-readable name for this project.
 # This is used in:
@@ -53,20 +53,20 @@ PACKAGING_INSTALLER_NAME="ExampleMod"
 #  - Windows desktop shortcut
 #  - Windows "Programs and Features" list
 #  - Linux launcher shortcut
-PACKAGING_DISPLAY_NAME="Example Mod"
+PACKAGING_DISPLAY_NAME="Over Powered Mod"
 
 # The URL for the project homepage.
 # This is used in:
 #  - Windows "Add/Remove Programs" list
-PACKAGING_WEBSITE_URL="http://openra.net"
+PACKAGING_WEBSITE_URL="http://www.moddb.com/mods/over-powered-mod"
 
 # The URL that is displayed in the crash dialog.
-PACKAGING_FAQ_URL="http://wiki.openra.net/FAQ"
+PACKAGING_FAQ_URL="http://www.moddb.com/mods/over-powered-mod"
 
 # The human-readable project authors.
 # This is used in:
 #  - Windows "Add/Remove Programs" list
-PACKAGING_AUTHORS="Example Mod authors"
+PACKAGING_AUTHORS="BoolBada"
 
 # The git tag to use for the macOS Launcher files.
 PACKAGING_OSX_LAUNCHER_TAG="osx-launcher-20200316"
@@ -77,14 +77,14 @@ PACKAGING_OSX_DMG_APPLICATION_ICON_POSITION="410, 210"
 PACKAGING_OSX_DMG_HIDDEN_ICON_POSITION="190, 350"
 
 # Filename to use for the launcher executable on Windows.
-PACKAGING_WINDOWS_LAUNCHER_NAME="ExampleMod"
+PACKAGING_WINDOWS_LAUNCHER_NAME="OverPoweredMod"
 
 # The name of the Windows Program Files directory to install the project files to.
-PACKAGING_WINDOWS_INSTALL_DIR_NAME="OpenRA Example Mod"
+PACKAGING_WINDOWS_INSTALL_DIR_NAME="Over Powered Mod"
 
 # The key prefix used for Windows registry metadata.
 # This should not contain spaces or special characters.
-PACKAGING_WINDOWS_REGISTRY_KEY="OpenRAExampleMod"
+PACKAGING_WINDOWS_REGISTRY_KEY="OverPoweredMod"
 
 # Path to the file containing the text to show in the Windows installer license dialog
 PACKAGING_WINDOWS_LICENSE_FILE="./COPYING"
@@ -108,7 +108,12 @@ PACKAGING_OVERWRITE_MOD_VERSION="True"
 
 # Automatic engine managment will treat the OpenRA engine files like a read-only dependency.
 # Disable this if you would like to modify or manager your own engine files.
-AUTOMATIC_ENGINE_MANAGEMENT="True"
+# OPMod: Set this to false, soft link top directory of my engine fork as "engine".
+# You don't need to run.cmd: it tells you to do things manually.
+# You compile your mod engine manually.
+# I don't think you need "OpenRA.Mods.Example".
+# If you are starting from scratch you would but mods like mine... Nope.
+AUTOMATIC_ENGINE_MANAGEMENT="False"
 
 # The URL to download the engine files from when AUTOMATIC_ENGINE_MANAGEMENT is enabled.
 AUTOMATIC_ENGINE_SOURCE="https://github.com/OpenRA/OpenRA/archive/${ENGINE_VERSION}.zip"
